--- a/jobs/dockerweb/jenkinsfile
+++ b/jobs/dockerweb/jenkinsfile
@@ -1,6 +1,6 @@
 
 pipeline {
-  agent any
+  agent { label 'principal' }
  parameters {
         string(name: 'name_container', defaultValue: 'proyecto-qa', description: 'nombre del docker')
         string(name: 'name_imagen', defaultValue: 'iproyecto-qa', description: 'nombre de la imagen')
