Fixed step: rm container if exists

--- a/jobs/dockerweb/jenkinsfile
+++ b/jobs/dockerweb/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                         docker stop ${name_final}
+                         docker stop ${name_final}; docker rm ${name_final}
                     '''
                     }
                     
