Fixed useradd layer

--- a/jobs/dockerweb/Dockerfile
+++ b/jobs/dockerweb/Dockerfile
@@ -1,6 +1,10 @@
 FROM php:7.2-apache
 LABEL maintainer="Gatovsky"
 
+ARG USERID=1000
+ARG GROUPID=1000
+ARG USERNAME=appuser
+
 RUN a2enmod rewrite
 
 RUN apt-get update && apt-get install -y \
@@ -15,14 +19,19 @@ RUN apt-get update && apt-get install -y \
         && apt-get clean \
         && rm -rf /var/lib/apt/lists/*
 
-RUN groupadd -g 1000 www \
-        && useradd -u 1000 -ms /bin/bash www
+RUN groupadd --gid ${GROUPID} ${USERNAME} \
+        && useradd --uid ${USERID} --gid ${GROUPID} --shell /bin/bash -m ${USERNAME}
+        # [Optional] Add sudo support. Omit if you don't need to install software after connecting.
+        # && apt-get update \
+        # && apt-get install -y sudo \
+        # && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+        # && chmod 0440 /etc/sudoers.d/$USERNAME
 
 COPY  . /var/www/html/
-RUN chown -R www:www /var/www/html
+RUN chown -R ${USERNAME}:${USERNAME} /var/www/html
 WORKDIR /var/www/html/
 
-USER www
+USER ${USERNAME}
 
 EXPOSE 80
 
